...
        return progressView
    }()
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.backgroundColor = .ypWhite
        webView.accessibilityIdentifier = "WebView"
        return webView
    }()

    // MARK: - UIViewController

    override func viewDidLoad() {
...
