...
        loginButton.setTitle("Войти", for: .normal)
        loginButton.contentHorizontalAlignment = .center
        loginButton.tintColor = .ypBlack
        loginButton.backgroundColor = .ypWhite
        loginButton.layer.cornerRadius = 16
        loginButton.addTarget(self, action: #selector(loginButtonTouchUpInside), for: .touchUpInside)
        loginButton.accessibilityIdentifier = "LoginButton"
        return loginButton
    }()

    // MARK: - UIViewController

    override func viewDidLoad() {
...
